// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`customers_payments .create() should return a payment instance 1`] = `
Payment {
  "_links": Object {
    "checkout": Object {
      "href": "https://www.mollie.com/paymentscreen/issuer/select/ideal/7UhSN1zuXS",
      "type": "text/html",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/payments/tr_7UhSN1zuXS",
      "type": "application/hal+json",
    },
  },
  "amount": Object {
    "currency": "GBP",
    "value": "75.00",
  },
  "createdAt": "2018-02-12T11:58:35.0Z",
  "customerId": "cst_kEn1PlbGa",
  "data": Object {
    "_links": Object {
      "checkout": Object {
        "href": "https://www.mollie.com/paymentscreen/issuer/select/ideal/7UhSN1zuXS",
        "type": "text/html",
      },
      "self": Object {
        "href": "https://api.mollie.com/v2/payments/tr_7UhSN1zuXS",
        "type": "application/hal+json",
      },
    },
    "amount": Object {
      "currency": "GBP",
      "value": "75.00",
    },
    "createdAt": "2018-02-12T11:58:35.0Z",
    "customerId": "cst_kEn1PlbGa",
    "description": "test",
    "details": null,
    "expiresAt": "2018-02-12T12:13:35.0Z",
    "id": "tr_7UhSN1zuXS",
    "isCancelable": false,
    "metadata": null,
    "method": "ideal",
    "mode": "test",
    "profileId": "pfl_QkEhN94Ba",
    "redirectUrl": "https://webshop.example.org/order/12345/",
    "resource": "payment",
    "status": "open",
  },
  "description": "test",
  "details": null,
  "expiresAt": "2018-02-12T12:13:35.0Z",
  "id": "tr_7UhSN1zuXS",
  "isCancelable": false,
  "metadata": null,
  "method": "ideal",
  "mode": "test",
  "profileId": "pfl_QkEhN94Ba",
  "redirectUrl": "https://webshop.example.org/order/12345/",
  "resource": "payment",
  "status": "open",
}
`;

exports[`customers_payments .create() should work with a callback 1`] = `
Payment {
  "_links": Object {
    "checkout": Object {
      "href": "https://www.mollie.com/paymentscreen/issuer/select/ideal/7UhSN1zuXS",
      "type": "text/html",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/payments/tr_7UhSN1zuXS",
      "type": "application/hal+json",
    },
  },
  "amount": Object {
    "currency": "GBP",
    "value": "75.00",
  },
  "createdAt": "2018-02-12T11:58:35.0Z",
  "customerId": "cst_kEn1PlbGa",
  "data": Object {
    "_links": Object {
      "checkout": Object {
        "href": "https://www.mollie.com/paymentscreen/issuer/select/ideal/7UhSN1zuXS",
        "type": "text/html",
      },
      "self": Object {
        "href": "https://api.mollie.com/v2/payments/tr_7UhSN1zuXS",
        "type": "application/hal+json",
      },
    },
    "amount": Object {
      "currency": "GBP",
      "value": "75.00",
    },
    "createdAt": "2018-02-12T11:58:35.0Z",
    "customerId": "cst_kEn1PlbGa",
    "description": "test",
    "details": null,
    "expiresAt": "2018-02-12T12:13:35.0Z",
    "id": "tr_7UhSN1zuXS",
    "isCancelable": false,
    "metadata": null,
    "method": "ideal",
    "mode": "test",
    "profileId": "pfl_QkEhN94Ba",
    "redirectUrl": "https://webshop.example.org/order/12345/",
    "resource": "payment",
    "status": "open",
  },
  "description": "test",
  "details": null,
  "expiresAt": "2018-02-12T12:13:35.0Z",
  "id": "tr_7UhSN1zuXS",
  "isCancelable": false,
  "metadata": null,
  "method": "ideal",
  "mode": "test",
  "profileId": "pfl_QkEhN94Ba",
  "redirectUrl": "https://webshop.example.org/order/12345/",
  "resource": "payment",
  "status": "open",
}
`;

exports[`customers_payments .create() should work with withParent 1`] = `
Payment {
  "_links": Object {
    "checkout": Object {
      "href": "https://www.mollie.com/paymentscreen/issuer/select/ideal/7UhSN1zuXS",
      "type": "text/html",
    },
    "self": Object {
      "href": "https://api.mollie.com/v2/payments/tr_7UhSN1zuXS",
      "type": "application/hal+json",
    },
  },
  "amount": Object {
    "currency": "GBP",
    "value": "75.00",
  },
  "createdAt": "2018-02-12T11:58:35.0Z",
  "customerId": "cst_kEn1PlbGa",
  "data": Object {
    "_links": Object {
      "checkout": Object {
        "href": "https://www.mollie.com/paymentscreen/issuer/select/ideal/7UhSN1zuXS",
        "type": "text/html",
      },
      "self": Object {
        "href": "https://api.mollie.com/v2/payments/tr_7UhSN1zuXS",
        "type": "application/hal+json",
      },
    },
    "amount": Object {
      "currency": "GBP",
      "value": "75.00",
    },
    "createdAt": "2018-02-12T11:58:35.0Z",
    "customerId": "cst_kEn1PlbGa",
    "description": "test",
    "details": null,
    "expiresAt": "2018-02-12T12:13:35.0Z",
    "id": "tr_7UhSN1zuXS",
    "isCancelable": false,
    "metadata": null,
    "method": "ideal",
    "mode": "test",
    "profileId": "pfl_QkEhN94Ba",
    "redirectUrl": "https://webshop.example.org/order/12345/",
    "resource": "payment",
    "status": "open",
  },
  "description": "test",
  "details": null,
  "expiresAt": "2018-02-12T12:13:35.0Z",
  "id": "tr_7UhSN1zuXS",
  "isCancelable": false,
  "metadata": null,
  "method": "ideal",
  "mode": "test",
  "profileId": "pfl_QkEhN94Ba",
  "redirectUrl": "https://webshop.example.org/order/12345/",
  "resource": "payment",
  "status": "open",
}
`;

exports[`customers_payments .list() should return a list of all customer payments 1`] = `
Array [
  Payment {
    "_links": Object {
      "checkout": Object {
        "href": "https://www.mollie.com/paymentscreen/issuer/select/ideal/7UhSN1zuXS",
        "type": "text/html",
      },
      "self": Object {
        "href": "https://api.mollie.com/v2/payments/tr_7UhSN1zuXS",
        "type": "application/hal+json",
      },
    },
    "amount": Object {
      "currency": "GBP",
      "value": "75.00",
    },
    "createdAt": "2018-02-12T11:58:35.0Z",
    "customerId": "cst_kEn1PlbGa",
    "data": Object {
      "_links": Object {
        "checkout": Object {
          "href": "https://www.mollie.com/paymentscreen/issuer/select/ideal/7UhSN1zuXS",
          "type": "text/html",
        },
        "self": Object {
          "href": "https://api.mollie.com/v2/payments/tr_7UhSN1zuXS",
          "type": "application/hal+json",
        },
      },
      "amount": Object {
        "currency": "GBP",
        "value": "75.00",
      },
      "createdAt": "2018-02-12T11:58:35.0Z",
      "customerId": "cst_kEn1PlbGa",
      "description": "test",
      "details": null,
      "expiresAt": "2018-02-12T12:13:35.0Z",
      "id": "tr_7UhSN1zuXS",
      "isCancelable": false,
      "metadata": null,
      "method": "ideal",
      "mode": "test",
      "profileId": "pfl_QkEhN94Ba",
      "redirectUrl": "https://webshop.example.org/order/12345/",
      "resource": "payment",
      "status": "open",
    },
    "description": "test",
    "details": null,
    "expiresAt": "2018-02-12T12:13:35.0Z",
    "id": "tr_7UhSN1zuXS",
    "isCancelable": false,
    "metadata": null,
    "method": "ideal",
    "mode": "test",
    "profileId": "pfl_QkEhN94Ba",
    "redirectUrl": "https://webshop.example.org/order/12345/",
    "resource": "payment",
    "status": "open",
  },
]
`;

exports[`customers_payments .list() should work with a callback 1`] = `
Array [
  Payment {
    "_links": Object {
      "checkout": Object {
        "href": "https://www.mollie.com/paymentscreen/issuer/select/ideal/7UhSN1zuXS",
        "type": "text/html",
      },
      "self": Object {
        "href": "https://api.mollie.com/v2/payments/tr_7UhSN1zuXS",
        "type": "application/hal+json",
      },
    },
    "amount": Object {
      "currency": "GBP",
      "value": "75.00",
    },
    "createdAt": "2018-02-12T11:58:35.0Z",
    "customerId": "cst_kEn1PlbGa",
    "data": Object {
      "_links": Object {
        "checkout": Object {
          "href": "https://www.mollie.com/paymentscreen/issuer/select/ideal/7UhSN1zuXS",
          "type": "text/html",
        },
        "self": Object {
          "href": "https://api.mollie.com/v2/payments/tr_7UhSN1zuXS",
          "type": "application/hal+json",
        },
      },
      "amount": Object {
        "currency": "GBP",
        "value": "75.00",
      },
      "createdAt": "2018-02-12T11:58:35.0Z",
      "customerId": "cst_kEn1PlbGa",
      "description": "test",
      "details": null,
      "expiresAt": "2018-02-12T12:13:35.0Z",
      "id": "tr_7UhSN1zuXS",
      "isCancelable": false,
      "metadata": null,
      "method": "ideal",
      "mode": "test",
      "profileId": "pfl_QkEhN94Ba",
      "redirectUrl": "https://webshop.example.org/order/12345/",
      "resource": "payment",
      "status": "open",
    },
    "description": "test",
    "details": null,
    "expiresAt": "2018-02-12T12:13:35.0Z",
    "id": "tr_7UhSN1zuXS",
    "isCancelable": false,
    "metadata": null,
    "method": "ideal",
    "mode": "test",
    "profileId": "pfl_QkEhN94Ba",
    "redirectUrl": "https://webshop.example.org/order/12345/",
    "resource": "payment",
    "status": "open",
  },
]
`;

exports[`customers_payments .list() should work with withParent 1`] = `
Array [
  Payment {
    "_links": Object {
      "checkout": Object {
        "href": "https://www.mollie.com/paymentscreen/issuer/select/ideal/7UhSN1zuXS",
        "type": "text/html",
      },
      "self": Object {
        "href": "https://api.mollie.com/v2/payments/tr_7UhSN1zuXS",
        "type": "application/hal+json",
      },
    },
    "amount": Object {
      "currency": "GBP",
      "value": "75.00",
    },
    "createdAt": "2018-02-12T11:58:35.0Z",
    "customerId": "cst_kEn1PlbGa",
    "data": Object {
      "_links": Object {
        "checkout": Object {
          "href": "https://www.mollie.com/paymentscreen/issuer/select/ideal/7UhSN1zuXS",
          "type": "text/html",
        },
        "self": Object {
          "href": "https://api.mollie.com/v2/payments/tr_7UhSN1zuXS",
          "type": "application/hal+json",
        },
      },
      "amount": Object {
        "currency": "GBP",
        "value": "75.00",
      },
      "createdAt": "2018-02-12T11:58:35.0Z",
      "customerId": "cst_kEn1PlbGa",
      "description": "test",
      "details": null,
      "expiresAt": "2018-02-12T12:13:35.0Z",
      "id": "tr_7UhSN1zuXS",
      "isCancelable": false,
      "metadata": null,
      "method": "ideal",
      "mode": "test",
      "profileId": "pfl_QkEhN94Ba",
      "redirectUrl": "https://webshop.example.org/order/12345/",
      "resource": "payment",
      "status": "open",
    },
    "description": "test",
    "details": null,
    "expiresAt": "2018-02-12T12:13:35.0Z",
    "id": "tr_7UhSN1zuXS",
    "isCancelable": false,
    "metadata": null,
    "method": "ideal",
    "mode": "test",
    "profileId": "pfl_QkEhN94Ba",
    "redirectUrl": "https://webshop.example.org/order/12345/",
    "resource": "payment",
    "status": "open",
  },
]
`;
